@@ -39,8 +39,8 @@
  *
  *************** <auto-copyright.pl END do not edit this line> ***************/
 
-#ifndef BASEIOSTATS_H
-#define BASEIOSTATS_H
+#ifndef _VPR_BASEIOSTATS_H
+#define _VPR_BASEIOSTATS_H
 
 #include <vpr/vprConfig.h>
 #include <vpr/Util/ReturnStatus.h>
@@ -57,6 +57,7 @@ class BlockIO;    // forward declare
  * This is the interface that the BlockIO class expects to deal with.
  * We add on other stats features using mixins that are added by a template composition adapter
  */
+template<class BaseIOType = BlockIO>
 class VPR_CLASS_API BaseIOStatsStrategy
 {
 public:
@@ -68,28 +69,37 @@ public:
    virtual ~BaseIOStatsStrategy()
    {;}
 
-   void setRealObject(vpr::BlockIO* real);
+   void setRealObject (BaseIOType* real)
+   {
+      mRealObject = real;
+   }
 
    enum { IS_NULL = 0 };
 
 public:
-   virtual void read_s(ReturnStatus& status,
-                         void* buffer, const vpr::Uint32 length,
-                          vpr::Uint32& bytes_read,
-                          const vpr::Interval timeout = vpr::Interval::NoTimeout);
+   virtual void read_s (ReturnStatus& status, void* buffer,
+                        const vpr::Uint32 length, vpr::Uint32& bytes_read,
+                        const vpr::Interval timeout = vpr::Interval::NoTimeout)
+   {
+      status = mRealObject->read_i(buffer, length, bytes_read, timeout);
+   }
 
-   virtual void readn_s(ReturnStatus& status,
-                          void* buffer, const vpr::Uint32 length,
-                           vpr::Uint32& bytes_read,
-                           const vpr::Interval timeout = vpr::Interval::NoTimeout);
+   virtual void readn_s (ReturnStatus& status, void* buffer,
+                         const vpr::Uint32 length, vpr::Uint32& bytes_read,
+                         const vpr::Interval timeout = vpr::Interval::NoTimeout)
+   {
+      status = mRealObject->readn_i(buffer, length, bytes_read, timeout);
+   }
 
-   virtual void write_s(ReturnStatus& status,
-                          const void* buffer, const vpr::Uint32 length,
-                           vpr::Uint32& bytes_written,
-                           const vpr::Interval timeout = vpr::Interval::NoTimeout);
+   virtual void write_s (ReturnStatus& status, const void* buffer,
+                         const vpr::Uint32 length, vpr::Uint32& bytes_written,
+                         const vpr::Interval timeout = vpr::Interval::NoTimeout)
+   {
+      status = mRealObject->write_i(buffer, length, bytes_written, timeout);
+   }
 
 protected:
-    vpr::BlockIO*   mRealObject;
+    BaseIOType*   mRealObject;
 };
 
 /**
@@ -97,7 +107,7 @@ protected:
  *
  * NOTE: Must derive from BaseIOStatsStrategy because the compiler still expects that interface
  */
-class NullIOStatsStrategy : public BaseIOStatsStrategy
+class NullIOStatsStrategy : public BaseIOStatsStrategy<vpr::BlockIO*>
 {
 public:
    enum { IS_NULL = 1 };
@@ -105,6 +115,4 @@ public:
 
 }; // namespace vpr
 
-#endif //BASEIOSTATS_H
-
-
+#endif //_VPR_BASEIOSTATS_H
